Fix create project form CSS on mobile

--- a/src/components/CreatePursuance/CreatePursuanceForm/CreatePursuanceForm.css
+++ b/src/components/CreatePursuance/CreatePursuanceForm/CreatePursuanceForm.css
@@ -41,4 +41,18 @@
   border-radius: 10px;
   color: #fff;
   background-color: #288bd6;
+  min-width: 200px;
+}
+
+@media (max-width: 767px) {
+  .create-pursuance-form {
+    box-sizing: border-box;
+    width: 100%;
+    max-width: 640px;
+    padding: 0 17px;
+  }
+
+  .create-pursuance-input {
+    width: 100%;
+  }
 }
