--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -59,7 +59,7 @@
   height: 60px;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 767px) {
   .navbar-nav {
     background-color: black;
     border: 1px solid white;
